My-education-edit

--- a/index.html
+++ b/index.html
@@ -125,9 +125,23 @@
                     <div class="main">
                         <h2>my education</h2>
                         <p>this is my education</p>
+                        <p>this is my education 2</p>
                     </div>
                     <div class="exp">
-                        some exp
+                        <div class="Certificate">
+                            <h3>Graphic Design Diploma</h3>
+                            <span><strong>Reeves College</strong></span>
+                            <span>4.0 GPA</span>
+                            <hr>
+                            <p>This is my Diploma</p>
+                        </div>
+                        <div class="Certificate">
+                            <h3>CIT Diploma</h3>
+                            <span><strong>lessbridge College</strong></span>
+                            <span>4.0 GPA</span>
+                            <hr>
+                            <p>This is my Diploma</p>
+                        </div>
                     </div>
                     <div class="clearfix"></div>
                     <hr>
@@ -136,7 +150,20 @@
                             <p>this is my work experience</p>
                         </div>
                         <div class="exp">
-                            some exp
+                            <div class="Certificate">
+                            <h3>Junior web develope</h3>
+                            <span><strong>Space X Company</strong></span>
+                            <span>1 Year</span>
+                            <hr>
+                            <p>I worked junior for space x comnpany in web develope</p>
+                        </div>
+                        <div class="Certificate">
+                            <h3>Lead Web Designer</h3>
+                            <span><strong>ABC Company</strong></span>
+                            <span>2 Years</span>
+                            <hr>
+                            <p>I workde for ABC company in lead web design</p>
+                        </div>
                         </div>
                 </div>
         </div>
@@ -194,4 +221,3 @@
         <!-- end footer -->
     </body>
 </html>
-الفيديو 10
