--- a/index.html
+++ b/index.html
@@ -171,8 +171,14 @@
                 <!-- start testmonials -->
                 <div class="testmonials">
                         <div class="container">
-                            <p>this is my testmonials</p>
+                            <q>this is my testmonials</q>
                             <h3>Abdomatrix</h3>
+                            <ul>
+                                <li class="active"></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                            </ul>
                         </div>
                     </div>
         <!-- end testmonials -->
