--- a/index.html
+++ b/index.html
@@ -190,15 +190,15 @@
                 <h2>Portfolio</h2>
                 <p>this my portfolio</p>
                 <div class="ourwork">
-                    <div><img src="http://placehold.it/350/333" alt=""></div>
-                    <div><img src="http://placehold.it/350/333" alt=""></div>
-                    <div><img src="http://placehold.it/350/333" alt=""></div>
-                    <div><img src="http://placehold.it/350/333" alt=""></div>
-                    <div><img src="http://placehold.it/350/333" alt=""></div>
-                    <div><img src="http://placehold.it/350/333" alt=""></div>
-                    <div><img src="http://placehold.it/350/333" alt=""></div>
-                    <div><img src="http://placehold.it/350/333" alt=""></div>
-                    <div><img src="http://placehold.it/350/333" alt=""></div> 
+                    <div><img src="images/portfolio/1.png" alt="Tech"></div>
+                    <div><img src="images/portfolio/2.jpg" alt="Tech"></div>
+                    <div><img src="images/portfolio/3.png" alt="Tech"></div>
+                    <div><img src="images/portfolio/4.jpg" alt="Tech"></div>
+                    <div><img src="images/portfolio/5.jpg" alt="Tech"></div>
+                    <div><img src="images/portfolio/6.gif" alt="Tech"></div>
+                    <div><img src="images/portfolio/7.jpg" alt="Tech"></div>
+                    <div><img src="images/portfolio/8.jpg" alt="Tech"></div>
+                    <div><img src="images/portfolio/9.jpg" alt="Tech"></div> 
                 </div>
             </div>
         </div>
