Contact Me Edit

--- a/index.html
+++ b/index.html
@@ -210,10 +210,27 @@
                 <div class="info">
                     <h2>contact me</h2>
                     <p>this my contact information</p>
+                    <p>
+                        123ST name<br>
+                        Cairo<br>
+                        area
+                    </p>
+                    <p>
+                        <strong>Email:</strong>abdomatrix2010@gmail.com<br>
+                        <strong>Phone:</strong>01120158938
+                    </p>
                 </div>
-                <div class="form">
-                    form
-                </div>
+                <form class="form">
+                    <label>Name *</label>
+                    <input type="text" name="name">
+                    <label>Email *</label>
+                    <input type="text" name="email">
+                    <label>Phone *</label>
+                    <input type="text" name="phone">
+                    <label>Message</label>
+                    <textarea></textarea>
+                    <input type="submit" value="Contact Me">
+                </form>
             </div>
         </div>
         <!-- end contact me -->
