--- a/index.html
+++ b/index.html
@@ -238,7 +238,13 @@
         <!-- start footer -->
         <div class="footer">
             <div class="container">
-              Copyright &copy; 2018 Abdomatrix  
+              <span>Copyright &copy; 2018 Abdomatrix</span>
+              <ul>
+                  <li><img src="images/Social/Facebook.png" alt=""></li>
+                  <li><img src="images/Social/twitter.png" alt=""></li>
+                  <li><img src="images/Social/linkedin.png" alt=""></li>
+                  <li><img src="images/Social/github.png" alt=""></li>
+              </ul>  
             </div>
         </div>
         <!-- end footer -->
