add some improve

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </div>
             <div class="navbar">
                 <div class="container">
-                    <h2>Abdo<span>matrix</span></h2>
+                    <h2 class="fl-left">Abdo<span>matrix</span></h2>
                     <ul>
                         <li class="active"><a href="#">Home</a></li>
                         <li><a href="#">About US</a></li>
