add font awesome to the site

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>convert psd to html</title>
+        <link rel="stylesheet" href="css/font-awesome.css">
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/style.css">
     </head>
@@ -19,7 +20,7 @@
                 </div>
             <div class="navbar">
                 <div class="container">
-                    <h2 class="fl-left">Abdo<span>matrix</span></h2>
+                    <h2 class="fl-left"><i class="fa fa-font fa-1x" aria-hidden="true"></i>bdo<span>matrix</span></h2>
                     <ul>
                         <li class="active"><a href="#">Home</a></li>
                         <li><a href="#">About US</a></li>
@@ -64,22 +65,26 @@
                     <p>this is about me</p>
                     <div class="hobies">
                         <div class="text">
-                            <img src="images/webdesgin.png">
+                            <i class="fa fa-diamond fa-3x" aria-hidden="true"></i>
+                           <!-- <img src="images/webdesgin.png"> -->
                             <h3>Desgin</h3>
                             <p>This is my desgins</p>
                         </div>
-                        <div>
-                            <img src="images/graphicdesgin.png">
+                        <div class="text">
+                            <i class="fa fa-desktop fa-3x" aria-hidden="true"></i>
+                           <!-- <img src="images/graphicdesgin.png"> -->
                             <h3>Graphic Design</h3>
                             <p>This is my graphic desgins</p>
                         </div>
-                        <div>
-                            <img src="images/onlinemarkting.png">
+                        <div class="text">
+                            <i class="fa fa-briefcase fa-3x" aria-hidden="true"></i>
+                          <!--  <img src="images/onlinemarkting.png"> -->
                             <h3>Online Marketing</h3>
                             <p>This is my online marketing</p>
                         </div>
-                        <div>
-                            <img src="images/seo.png">
+                        <div class="text">
+                            <i class="fa fa-bug fa-3x" aria-hidden="true"></i>
+                          <!--  <img src="images/seo.png"> -->
                             <h3>seo</h3>
                             <p>This is my seo</p>
                         </div>
@@ -238,12 +243,17 @@
         <!-- start footer -->
         <div class="footer">
             <div class="container">
-              <span>Copyright &copy; 2018 Abdomatrix</span>
+              <span><strong>Copyright &copy; 2018 Abdomatrix</strong></span>
               <ul>
-                  <li><img src="images/Social/Facebook.png" alt=""></li>
+                  <li><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></li>
+                  <li><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i></</li>
+                  <li><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></li>
+                  <li><i class="fa fa-github-square fa-2x" aria-hidden="true"></i></li>
+
+                  <!-- <li><img src="images/Social/Facebook.png" alt=""></li>
                   <li><img src="images/Social/twitter.png" alt=""></li>
                   <li><img src="images/Social/linkedin.png" alt=""></li>
-                  <li><img src="images/Social/github.png" alt=""></li>
+                  <li><img src="images/Social/github.png" alt=""></li> // -->
               </ul>  
             </div>
         </div>
